# agent_smith_coding

./: .gitignore  README.md  fast-agent.yaml  fastagent.jsonl  package-lock.json  package.json  pyproject.toml
docs/: vscode-integration.md
src/open_agent_coding/: __init__.py  agent_run_evaluator.py  app.py  terminal_mcp.py
src/open_agent_coding.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  SUPPORT.md  open-agent-coding-0.1.0.vsix  open-agent-coding-0.1.1.vsix  open-agent-coding-0.1.10.vsix  open-agent-coding-0.1.11.vsix  open-agent-coding-0.1.12.vsix  open-agent-coding-0.1.13.vsix  open-agent-coding-0.1.14.vsix  open-agent-coding-0.1.15.vsix  open-agent-coding-0.1.16.vsix  open-agent-coding-0.1.17.vsix  open-agent-coding-0.1.18.vsix  open-agent-coding-0.1.19.vsix  open-agent-coding-0.1.2.vsix  open-agent-coding-0.1.20.vsix  open-agent-coding-0.1.21.vsix  open-agent-coding-0.1.22.vsix  open-agent-coding-0.1.23.vsix  open-agent-coding-0.1.24.vsix  open-agent-coding-0.1.25.vsix  open-agent-coding-0.1.3.vsix  open-agent-coding-0.1.4.vsix  open-agent-coding-0.1.5.vsix  open-agent-coding-0.1.6.vsix  open-agent-coding-0.1.7.vsix  open-agent-coding-0.1.8.vsix  open-agent-coding-0.1.9.vsix  package-lock.json  package.json
vscode-extension/src/: extension.ts
